my first commit

--- a/html lesson/index.html
+++ b/html lesson/index.html
@@ -34,6 +34,7 @@ My First Web Page
         <article id="HTML_learning">
         <h2> I am motivated to learn HTMLin </h2>
         <p>This is my first web paragraph in live server.</p>
+        <p> up and onwards</p>
         <section>
             <h3>Hyper Text Markup Language</h3>
         <img src="img/html5-icon-png-9.jpg" alt="HTML logo" title="This is an image of favicon" width="150" height="150">
