added an extra button on the file

--- a/html lesson/index.html
+++ b/html lesson/index.html
@@ -160,7 +160,7 @@ My First Web Page
 <br>
 <article>
     <h2>Contact Me</h2>
-    <p>Lookiking forward for your honest feedback</p>
+    <p>Looking forward for your honest feedback</p>
     <form action="https://httpbin.org/get"method="get">
         <fieldset>
             <legend>Personal Information</legend>
@@ -178,7 +178,7 @@ My First Web Page
 </p>
 <p>
     <label for="decade">favourite decade</label>
-    <input type="number" name="decade"id="decade" min="1960" max="2020" step="5" value="1970"required>
+    <input type="number" name="decade"id="decade" min="1960" max="2030" step="5" value="1970"required>
 </p>
 <p>
     <label for="coffee">Favourite Coffee</label>
@@ -234,6 +234,10 @@ My First Web Page
     <p>
         <input type="checkbox"name="pets"id="bird"value="bird">
         <label for="bird">Bird</label>
+    </p>
+    <p>
+        <input type="checkbox" name="pets"id="none"value="none">
+        <label for="none">None</label>
     </p>
 </fieldset>
 <br>
