--- a/javascript modules/index.html
+++ b/javascript modules/index.html
@@ -24,7 +24,8 @@
     <script  type="module" src= "js.module file.js"></script>
   </head>
   <body>
-    <h2>My 2nd View</h2>
+    <section>
+      <h2>My 2nd View</h2>
       </section>
     </main>
     
